do it java 스택과 큐

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "P11286",
+      "request": "launch",
+      "mainClass": "자바.P11286",
+      "projectName": "Algorithm-study_f3e488b5"
+    },
+    {
+      "type": "java",
       "name": "p10986",
       "request": "launch",
       "mainClass": "자바.p10986",
