--- a/자바/.gitignore
+++ b/자바/.gitignore
@@ -22,3 +22,8 @@
 /D2_2001.class
 /D2_1926.class
 /D2_1928.class
+/D2_1979.class
+/D2_1979_dfs.class
+/D2_1974.class
+/D2_1961.class
+/D2_1983.class
