--- a/자바/.gitignore
+++ b/자바/.gitignore
@@ -1,35 +1,1 @@
-/P11286.class
-/P17298.class
-/P1927.class
-/P2164.class
-/P5430.class
-/p10986.class
-/p11659.class
-/p11660.class
-/p11720.class
-/p1253.class
-/p12891.class
-/p1546.class
-/p1874.class
-/p1940.class
-/p2018.class
-/D3_1206.class
-/D2_1859.class
-/D3_1244.class
-/D2_1954.class
-/D2_1204.class
-/D2_201.class
-/D2_2001.class
-/D2_1926.class
-/D2_1928.class
-/D2_1979.class
-/D2_1979_dfs.class
-/D2_1974.class
-/D2_1961.class
-/D2_1983.class
-/D2_2005.class
-/D2_1959.class
-/D2_2007.class
-/D2_1989.class
-/D3_1208.class
-/D3_1209.class
+*.class
